--- a/css/styles.css
+++ b/css/styles.css
@@ -6,15 +6,17 @@
 /* Hover and secondary buttons color #2196F3; */
 /* Primary button color #F5F4FA; */
 /* Primary logo color #000000 */
+
 :root {
-  --background-primary-color: #F5F5F5;
+  /* Colors */
+  --background-primary-color: #f5f5f5;
   --background-secondary-color: #f5f4fa;
   --background-footer-color: #2f303a;
-  --background-header-color: #ffffff;
-  --hero-color: #2f303a;
+  --background-white-color: #ffffff;
+  --background-hero-color: #2f303a;
   --text-primary-color: #212121;
   --text-secondary-color: #757575;
-  --text-hero-color: #ffffff;
+  --text-white-color: #ffffff;
   --text-hover-color: #2196f3;
   --button-primary-color: #f5f4fa;
   --button-secondary-color: #2196f3;
@@ -23,27 +25,42 @@
   --logo-web-color: #2196f3;
   --logo-header-color: #000000;
   --logo-footer-color: #ffffff;
+
+  /* Fonts */
+  --primary-font: "Roboto", sans-serif;
+  --secondary-font: "Raleway", sans-serif;
 }
+/* Body */
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: var(--primary-font);
   background-color: var(--background-primary-color);
   color: var(--text-primary-color);
 }
 /* Header */
 .header {
-    background-color: var(--background-header-color);
+  background-color: var(--background-white-color);
 }
 /* Logo` */
 .logo {
   color: var(--logo-web-color);
+  font-family: var(--secondary-font);
+  font-weight: 700;
 }
 .logo-header {
   color: var(--logo-header-color);
+  font-family: var(--secondary-font);
+  font-weight: 700;
 }
 .logo-footer {
   color: var(--logo-footer-color);
+  font-family: var(--secondary-font);
+  font-weight: 700;
 }
 /* Navigation */
+.nav-list {
+  font-family: var(--primary-font);
+  font-weight: 500;
+}
 .nav-list-item {
   color: var(--text-primary-color);
 }
@@ -53,6 +70,7 @@ body {
 /* Contacts */
 .contact-list-item {
   color: var(--text-secondary-color);
+  font-weight: 500;
 }
 .contact-list-item:hover {
   color: var(--text-hover-color);
@@ -60,28 +78,68 @@ body {
 /* Main */
 /* Hero */
 .hero {
-  background-color: var(--hero-color);
-  color: var(--text-hero-color);
+  background-color: var(--background-hero-color);
+}
+.hero-title {
+  font-family: var(--primary-font);
+  font-weight: 900;
+  color: var(--text-white-color);
 }
 /* Button Order */
 .button-order {
   background-color: var(--button-secondary-color);
-  color: var(var(--button-text-secondary-color));
+  color: var(--button-text-secondary-color);
+  font-family: var(--primary-font);
+  font-weight: 700;
 }
 /* Speciality */
 .speciality {
-    background-color: var(--background-primary-color);
+  background-color: var(--background-primary-color);
 }
 .speciality-list-title {
-    color: var(--text-primary-color);
+  font-weight: 700;
 }
 .speciality-description {
-    color: var(--text-secondary-color);
+  color: var(--text-secondary-color);
+  font-weight: 400;
 }
 /* What we do */
 .what-we-do {
-    background-color: var(--background-primary-color);
+  background-color: var(--background-primary-color);
 }
 .wwd-title {
-    color: var(--text-primary-color);
+  color: var(--text-primary-color);
+  font-weight: 700;
+}
+/* Our team */
+.team {
+  background-color: var(--background-secondary-color);
+}
+.team-title {
+  color: var(--text-primary-color);
+  font-weight: 700;
+}
+.team-member {
+  background-color: var(--background-white-color);
+  width: 270px;
+}
+.team-member-name {
+  color: var(--text-primary-color);
+  font-weight: 500;
+}
+.team-member-job {
+  color: var(--text-secondary-color);
+  font-weight: 400;
+}
+/* Footer */
+.footer {
+  background-color: var(--background-footer-color);
+}
+.address-item {
+  color: var(--text-white-color);
+  font-weight: 400;
+}
+.address-list .contact-list-item {
+  color: var(--text-white-color);
+  opacity: 0.6;
 }
