--- a/css/styles.css
+++ b/css/styles.css
@@ -1,145 +1,154 @@
-/* Background primary color #F5F5F5;; */
-/* Background secondary color #F5F4FA; */
-/* Hero and footer background color #2F303A; */
-/* Text primary color #212121; */
-/* Text secondary color #757575; */
-/* Hover and secondary buttons color #2196F3; */
-/* Primary button color #F5F4FA; */
-/* Primary logo color #000000 */
-
 :root {
-  /* Colors */
-  --background-primary-color: #f5f5f5;
-  --background-secondary-color: #f5f4fa;
-  --background-footer-color: #2f303a;
-  --background-white-color: #ffffff;
-  --background-hero-color: #2f303a;
-  --text-primary-color: #212121;
-  --text-secondary-color: #757575;
-  --text-white-color: #ffffff;
+  --bg-primary-color: #f5f5f5;
+  --bg-secondary-color: #f5f4fa;
+  --bg-tertiary-color: #ffffff;
+  --bg-hero-color: #2f303a;
+  --bg-footer-color: #2f303a;
+  --bg-button-secondary-color: #2196f3;
+  --bg-hover-color: #2196f3;
+
+  --text-primary-color: #757575;
+  --text-secondary-color: #212121;
   --text-hover-color: #2196f3;
-  --button-primary-color: #f5f4fa;
-  --button-secondary-color: #2196f3;
-  --button-text-primary-color: #212121;
-  --button-text-secondary-color: #ffffff;
-  --logo-web-color: #2196f3;
+  --text-tertiary-color: #ffffff;
+  --text-contacts-color: rgba(255, 255, 255, 0.6);
+
+  --logo-primary-color: #2196f3;
   --logo-header-color: #000000;
   --logo-footer-color: #ffffff;
 
-  /* Fonts */
-  --primary-font: "Roboto", sans-serif;
-  --secondary-font: "Raleway", sans-serif;
+  --main-font: "Roboto", sans-serif;
+  --font-secondary: "Raleway", sans-serif;
 }
-/* Body */
+
 body {
-  font-family: var(--primary-font);
-  background-color: var(--background-primary-color);
+  font-family: var(--main-font);
+  font-weight: 400;
+  letter-spacing: 0.03em;
+  background-color: var(--bg-primary-color);
   color: var(--text-primary-color);
 }
 /* Header */
-.header {
-  background-color: var(--background-white-color);
-}
 /* Logo` */
+.header {
+  background-color: var(--bg-tertiary-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+}
 .logo {
-  color: var(--logo-web-color);
-  font-family: var(--secondary-font);
+  font-family: var(--font-secondary);
   font-weight: 700;
+  color: var(--logo-primary-color);
+  font-size: 26px;
+  line-height: 1.19;
 }
 .logo-header {
   color: var(--logo-header-color);
-  font-family: var(--secondary-font);
-  font-weight: 700;
 }
 .logo-footer {
   color: var(--logo-footer-color);
-  font-family: var(--secondary-font);
-  font-weight: 700;
 }
 /* Navigation */
 .nav-list {
-  font-family: var(--primary-font);
-  font-weight: 500;
-}
-.nav-list-item {
-  color: var(--text-primary-color);
-}
-.nav-list-item:hover {
-  color: var(--text-hover-color);
-}
-/* Contacts */
-.contact-list-item {
   color: var(--text-secondary-color);
-  font-weight: 500;
 }
+.contact-list {
+}
+.nav-list-item:hover,
 .contact-list-item:hover {
   color: var(--text-hover-color);
 }
+/* body {
+  font-family: var(--main-font);
+  font-weight: 400;
+  letter-spacing: 0.03em;
+  background-color: var(--bg-primary-color);
+  color: var(--text-primary-color); */
+
 /* Main */
+.title {
+  color: var(--text-secondary-color);
+}
 /* Hero */
 .hero {
-  background-color: var(--background-hero-color);
+  background-color: var(--bg-hero-color);
 }
 .hero-title {
-  font-family: var(--primary-font);
+  color: var(--text-tertiary-color);
   font-weight: 900;
-  color: var(--text-white-color);
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
 }
-/* Button Order */
 .button-order {
-  background-color: var(--button-secondary-color);
-  color: var(--button-text-secondary-color);
-  font-family: var(--primary-font);
+  background-color: var(--bg-button-secondary-color);
+  color: var(--text-tertiary-color);
   font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
 }
 /* Speciality */
-.speciality {
-  background-color: var(--background-primary-color);
-}
 .speciality-list-title {
   font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
 }
 .speciality-description {
-  color: var(--text-secondary-color);
-  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
 }
 /* What we do */
-.what-we-do {
-  background-color: var(--background-primary-color);
-}
 .wwd-title {
-  color: var(--text-primary-color);
   font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
 }
 /* Our team */
 .team {
-  background-color: var(--background-secondary-color);
+  background-color: var(--bg-secondary-color);
 }
 .team-title {
-  color: var(--text-primary-color);
   font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
 }
 .team-member {
-  background-color: var(--background-white-color);
+  background-color: var(--bg-tertiary-color);
   width: 270px;
 }
 .team-member-name {
-  color: var(--text-primary-color);
   font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
 }
 .team-member-job {
-  color: var(--text-secondary-color);
-  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
 }
 /* Footer */
 .footer {
-  background-color: var(--background-footer-color);
+    background-color: var(--bg-footer-color);
 }
 .address-item {
-  color: var(--text-white-color);
-  font-weight: 400;
+    color: var(--text-tertiary-color);
+    font-size: 14px;
+line-height: 1.71;
 }
-.address-list .contact-list-item {
-  color: var(--text-white-color);
-  opacity: 0.6;
+.footer .contact-list-item {
+    color: var(--text-contacts-color);
+    font-size: 14px;
+line-height: 1.71;
 }
