--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
   --bg-tertiary-color: #ffffff;
   --bg-hero-color: #2f303a;
   --bg-footer-color: #2f303a;
+  --bg-button-primary-color: #f5f4fa;
   --bg-button-secondary-color: #2196f3;
   --bg-hover-color: #2196f3;
 
@@ -20,10 +21,12 @@
   --main-font: "Roboto", sans-serif;
   --font-secondary: "Raleway", sans-serif;
 }
-
 body {
   font-family: var(--main-font);
+  font-style: normal;
   font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
   letter-spacing: 0.03em;
   background-color: var(--bg-primary-color);
   color: var(--text-primary-color);
@@ -33,7 +36,6 @@ body {
 .header {
   background-color: var(--bg-tertiary-color);
   font-weight: 500;
-  font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
@@ -43,6 +45,7 @@ body {
   color: var(--logo-primary-color);
   font-size: 26px;
   line-height: 1.19;
+  letter-spacing: 0.03em;
 }
 .logo-header {
   color: var(--logo-header-color);
@@ -56,17 +59,6 @@ body {
 }
 .contact-list {
 }
-.nav-list-item:hover,
-.contact-list-item:hover {
-  color: var(--text-hover-color);
-}
-/* body {
-  font-family: var(--main-font);
-  font-weight: 400;
-  letter-spacing: 0.03em;
-  background-color: var(--bg-primary-color);
-  color: var(--text-primary-color); */
-
 /* Main */
 .title {
   color: var(--text-secondary-color);
@@ -96,15 +88,15 @@ body {
   letter-spacing: 0.06em;
 }
 /* Speciality */
+.speciality .title {
+  font-size: 14px;
+}
 .speciality-list-title {
   font-weight: 700;
-  font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
 }
 .speciality-description {
-  font-size: 14px;
-  line-height: 1.71;
 }
 /* What we do */
 .wwd-title {
@@ -138,17 +130,57 @@ body {
   line-height: 1.19;
   text-align: center;
 }
+/* Filters */
+.filter {
+  background-color: var(--bg-button-primary-color);
+  color: var(--text-secondary-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+}
+.filter:hover,
+.filter:focus {
+  background-color: var(--bg-hover-color);
+  color: var(--text-tertiary-color);
+}
+/* Projects */
+.project-item {
+  background-color: var(--bg-tertiary-color);
+  width: 370px;
+}
+.project-list .title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+.project-example {
+  font-size: 16px;
+  line-height: 1.88;
+}
 /* Footer */
 .footer {
-    background-color: var(--bg-footer-color);
+  background-color: var(--bg-footer-color);
+}
+.address {
+  font-style: normal;
 }
 .address-item {
-    color: var(--text-tertiary-color);
-    font-size: 14px;
-line-height: 1.71;
+  color: var(--text-tertiary-color);
 }
 .footer .contact-list-item {
-    color: var(--text-contacts-color);
-    font-size: 14px;
-line-height: 1.71;
+  color: var(--text-contacts-color);
+}
+/* Hover */
+.address-item:hover,
+.nav-list-item:hover,
+.contact-list-item:hover {
+  color: var(--text-hover-color);
+}
+/* Focus */
+.address-item:focus,
+.nav-list-item:focus,
+.contact-list-item:focus {
+  color: var(--text-hover-color);
 }
