--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@ body {
   background-color: var(--bg-primary-color);
   color: var(--text-primary-color);
 }
+/* Main Studio */
 /* Header */
 /* Logo` */
 .header {
@@ -54,14 +55,11 @@ body {
   color: var(--logo-footer-color);
 }
 /* Navigation */
-.nav-list {
+.nav-list,
+.title {
   color: var(--text-secondary-color);
 }
 .contact-list {
-}
-/* Main */
-.title {
-  color: var(--text-secondary-color);
 }
 /* Hero */
 .hero {
@@ -99,7 +97,8 @@ body {
 .speciality-description {
 }
 /* What we do */
-.wwd-title {
+.wwd-title,
+.team-title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -108,12 +107,6 @@ body {
 /* Our team */
 .team {
   background-color: var(--bg-secondary-color);
-}
-.team-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
 }
 .team-member {
   background-color: var(--bg-tertiary-color);
@@ -144,6 +137,7 @@ body {
   background-color: var(--bg-hover-color);
   color: var(--text-tertiary-color);
 }
+/* Main Portfolio */
 /* Projects */
 .project-item {
   background-color: var(--bg-tertiary-color);
