--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,8 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
-.link {
+.link,
+.logo {
   color: inherit;
   text-decoration: none;
 }
