--- a/css/styles.css
+++ b/css/styles.css
@@ -28,18 +28,12 @@ body {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  background-color: var(--bg-primary-color);
+  background-color: var(--bg-tertiary-color);
   color: var(--text-primary-color);
 }
 /* Main Studio */
 /* Header */
 /* Logo` */
-.header {
-  background-color: var(--bg-tertiary-color);
-  font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-}
 .link,
 .logo {
   color: inherit;
@@ -63,6 +57,11 @@ body {
   color: var(--logo-footer-color);
 }
 /* Navigation */
+.nav .link {
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+}
 .nav-list,
 .title {
   color: var(--text-secondary-color);
@@ -96,6 +95,10 @@ body {
   cursor: pointer;
 }
 /* Speciality */
+.speciality,
+.what-we-do {
+  background-color: var(--bg-primary-color);
+}
 .speciality .title {
   font-size: 14px;
 }
@@ -148,6 +151,9 @@ body {
 }
 /* Main Portfolio */
 /* Projects */
+.projects {
+  background-color: var(--bg-primary-color);
+}
 .project-item {
   background-color: var(--bg-tertiary-color);
   width: 370px;
