--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,11 @@ body {
 /* Main Studio */
 /* Header */
 /* Logo` */
+.header .link {
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+}
 .link,
 .logo {
   color: inherit;
@@ -57,11 +62,6 @@ body {
   color: var(--logo-footer-color);
 }
 /* Navigation */
-.nav .link {
-  font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-}
 .nav-list,
 .title {
   color: var(--text-secondary-color);
